--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
+    "deploy": "CI = '' gh-pages -d build",
+    "build": "CI = '' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
