--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "CI = '' gh-pages -d build",
-    "build": "CI = '' react-scripts build",
+    "build": "CI= npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
