--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "homepage": "https://sknoelk.github.io/bookwise/",
+  "homepage": ".",
   "name": "bookwise",
   "version": "0.1.0",
+  "node": "18.4.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
