Please enter the commit message for your changes. Lines starting

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "homepage": ".",
   "name": "bookwise",
   "version": "0.1.0",
-  "node": "18.4.0",
+  "engines": {
+    "node": "18.4.0"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
